@@ -11,6 +11,7 @@ Pint Changelog
 - Switch from appdirs to platformdirs.
 - Fixes issues related to GenericPlainRegistry.__getattr__ type (PR #2038, Issues #1946 and #1804)
 - Removed deprecated references in documentation and tests (PR #2058, Issue #2057)
+- Fixed issue with `.to_compact` and Magnitudes with uncertainties / Quantities with units (PR #2069, issue #2044)
 
 
 0.24.1 (2024-06-24)
